2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	distcheck passes.

	* sdk/Makefile.am (gccversion): Simplify the handling.
	(CLEANFILES): Remove Makefile.module.
	* build-aux/doxygen.mk: Chmod before rm to make sure it'll pass.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Fixes.

	* sdk/Makefile.am: Use DESTDIR.
	Ship Makefile.module.in.
	* src/utils/urbiwalk.cpp: Use a stack allocated object.
	Formatting changes.
	* src/liburbi/uobject/uobject.cc: Remove useless "urbi::".
	* src/liburbi/uobject/uvar.cc: No using namespace urbi.
	(operator<< (ostream, UValue): Don't prototype here, it is
	declared elsewhere anyway.
	Put everything inside the urbi namespace.
	* src/liburbi/uobject/uobject.template.h: Formatting changes.
	(UValue::print): New.
	* src/liburbi/uobject/common_uvalue.cc: Work in urbi.
	(UValue::print): Implement.
	(operator<<(ostream, UValue): Use it.
	Formatting changes.
	* configure.ac (includedir, targetdir): Fix their value.
	* build-aux/doxygen.mk (uninstall-local): New.

2006-09-25  matthieu nottale  <nottale@gostai.com>

	Add support for void data type

	* src/liburbi/uobject/common_uvalue.cc: Add support for 'void' in parse function (happens in OBJ type).

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Revert some dos2unix.
	* src/liburbi/openr/liburbi.mips.a: Revert to previous version.
	* src/examples/urbibandwidth.vcproj: Ditto.
	* src/examples/urbiplay.vcproj: Ditto.
	* src/examples/urbiballtrackinghead.vcproj: Ditto.
	* src/examples/urbiimage.vcproj: Ditto.
	* src/examples/urbisound.vcproj: Ditto.
	* src/examples/urbiping.vcproj: Ditto.
	* src/examples/urbisendsound.vcproj: Ditto.
	* src/examples/urbimirror.vcproj: Ditto.
	* src/examples/urbirecord.vcproj: Ditto.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	dos2unix.

	* src/utils/urbiwalk.cpp: Use Unix end-of-lines.
	* src/utils/urbicycle.cpp: Ditto.
	* src/utils/Move.cpp: Ditto.
	* src/utils/urbiscale.cpp: Ditto.
	* src/utils/Move.h: Ditto.