@@ -11,10 +11,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([1.9.6 -Wall dist-zip])
 
 # Urbi standard locations.
-AC_SUBST([TARGET], [remote])
-AC_SUBST([urbicoredir], ['$(datadir)/urbicore'])
-AC_SUBST([targetdir],   ['$(urbicoredir)/$(TARGET)'])
-AC_SUBST([includedir],  ['$(urbicoredir)/include'])
+URBI_DIRS([remote])
 
 ## --------------- ##
 ## Documentation.  ##
