@@ -34,19 +34,19 @@ int parseHeader(FILE *f,FILE * of) {
   if (fread(&devCount,4,1,f)!=1) return 4;
   if (fwrite(&devCount,4,1,of)!=1) return 5;
   for (int i=0;i<devCount;i++) {
-	char device[256];
-	int pos=0;
-	int a;
-	do {
-	  if ((device[pos++]=fgetc(f))==EOF) return 6;
-	}
-	while (device[pos-1]);
-	if (fwrite(device,strlen(device)+1,1,of)!=1) return 7;
-	if (fread(&a,2,1,f)!=1) return 8;
-	if (fwrite(&a,2,1,of)!=1) return 9;
-	int type;
-	if ( (type=fgetc(f)) ==EOF) return 10;
-	fputc(type,of);
+    char device[256];
+    int pos=0;
+    int a;
+    do {
+      if ((device[pos++]=fgetc(f))==EOF) return 6;
+    }
+    while (device[pos-1]);
+    if (fwrite(device,strlen(device)+1,1,of)!=1) return 7;
+    if (fread(&a,2,1,f)!=1) return 8;
+    if (fwrite(&a,2,1,of)!=1) return 9;
+    int type;
+    if ( (type=fgetc(f)) ==EOF) return 10;
+    fputc(type,of);
   }
   return 0;
 }
@@ -54,8 +54,8 @@ int parseHeader(FILE *f,FILE * of) {
 int main(int argc, char * argv[]) {
   //cut static part of an urbi file
   if (argc<4) {
-	printf("usage %s infile outfile factor [interpolate]\n\ttime-scale the urbi file by given factor (>1 means slow-down) \n\tInterpolation will only work with integer factors\n",argv[0]);
-	exit(1);
+    printf("usage %s infile outfile factor [interpolate]\n\ttime-scale the urbi file by given factor (>1 means slow-down) \n\tInterpolation will only work with integer factors\n",argv[0]);
+    exit(1);
   }
   FILE * inf;
   FILE * ouf;
@@ -81,57 +81,57 @@ int main(int argc, char * argv[]) {
   for (int i=0;i<devCount;i++) {nextuc[i].timestamp=-1;}
   int inittime=666;
   while (fread(&uc,sizeof(UCommand),1,inf)==1) {
-	if (starttime==-1) starttime=uc.timestamp;
-	if ( interpolate && (lastuc[uc.id].timestamp==-1) ) {
-	  if (inittime==666) inittime=uc.timestamp;
-	  fprintf(stderr,"first command for %d at %d   (inittime %d)\n",uc.id, uc.timestamp,inittime);
-	  if (inittime!=uc.timestamp) { //trouble, missed some commands at start
-		lastuc[uc.id]=uc;
-		lastuc[uc.id].timestamp=(int) ( ((float)(inittime)-((float)starttime))*scale);
-		fprintf(stderr,"miss: adding command for id %d at time %d\n",uc.id,lastuc[uc.id].timestamp);
-		//go on processing uc
-	  }
-	  else {
-		uc.timestamp = (int) ( ((float)(uc.timestamp)-((float)starttime))*scale);
-		fwrite(&uc,sizeof(UCommand),1,ouf);
-		lastuc[uc.id]=uc;
-		continue;
-	  }
-	}
+    if (starttime==-1) starttime=uc.timestamp;
+    if ( interpolate && (lastuc[uc.id].timestamp==-1) ) {
+      if (inittime==666) inittime=uc.timestamp;
+      fprintf(stderr,"first command for %d at %d   (inittime %d)\n",uc.id, uc.timestamp,inittime);
+      if (inittime!=uc.timestamp) { //trouble, missed some commands at start
+	lastuc[uc.id]=uc;
+	lastuc[uc.id].timestamp=(int) ( ((float)(inittime)-((float)starttime))*scale);
+	fprintf(stderr,"miss: adding command for id %d at time %d\n",uc.id,lastuc[uc.id].timestamp);
+	//go on processing uc
+      }
+      else {
 	uc.timestamp = (int) ( ((float)(uc.timestamp)-((float)starttime))*scale);
-	if (interpolate) {
-	  if (nextuc[uc.id].timestamp != -1) {
-		//flush all!
-		fprintf(stderr, "flush, %d -1 steps\n",(int)scale);
-		for (int step=1;step<(int)scale;step++) { //step 0 already sent, last step will be sent after
-		  for (int dev=0;dev<devCount;dev++) {
-			if (nextuc[dev].timestamp==-1) continue;
-			UCommand suc=lastuc[dev];
-			suc.timestamp = (lastuc[dev].timestamp*((int)scale-step)+ nextuc[dev].timestamp*step) /(int)scale;
-			suc.value.angle = (lastuc[dev].value.angle*(float)((int)scale-step)+ nextuc[dev].value.angle*(float)step) /(float)((int)scale);
-			fwrite(&suc,sizeof(UCommand),1,ouf);
-		  }
-		}
-		//send the last
-	  	for (int dev=0;dev<devCount;dev++) {
-		  if (nextuc[dev].timestamp==-1) continue;
-		  fwrite(&nextuc[dev],sizeof(UCommand),1,ouf);
-		  lastuc[dev]=nextuc[dev];
-		  nextuc[dev].timestamp=-1;		  
-		}
+	fwrite(&uc,sizeof(UCommand),1,ouf);
+	lastuc[uc.id]=uc;
+	continue;
+      }
+    }
+    uc.timestamp = (int) ( ((float)(uc.timestamp)-((float)starttime))*scale);
+    if (interpolate) {
+      if (nextuc[uc.id].timestamp != -1) {
+	//flush all!
+	fprintf(stderr, "flush, %d -1 steps\n",(int)scale);
+	for (int step=1;step<(int)scale;step++) { //step 0 already sent, last step will be sent after
+	  for (int dev=0;dev<devCount;dev++) {
+	    if (nextuc[dev].timestamp==-1) continue;
+	    UCommand suc=lastuc[dev];
+	    suc.timestamp = (lastuc[dev].timestamp*((int)scale-step)+ nextuc[dev].timestamp*step) /(int)scale;
+	    suc.value.angle = (lastuc[dev].value.angle*(float)((int)scale-step)+ nextuc[dev].value.angle*(float)step) /(float)((int)scale);
+	    fwrite(&suc,sizeof(UCommand),1,ouf);
 	  }
-	  nextuc[uc.id]=uc;
 	}
-	else {
-	  fwrite(&uc,sizeof(UCommand),1,ouf);
-	}
-  }
-  //send the last chunk
-  if (interpolate)
+	//send the last
 	for (int dev=0;dev<devCount;dev++) {
 	  if (nextuc[dev].timestamp==-1) continue;
 	  fwrite(&nextuc[dev],sizeof(UCommand),1,ouf);
+	  lastuc[dev]=nextuc[dev];
+	  nextuc[dev].timestamp=-1;		  
 	}
+      }
+      nextuc[uc.id]=uc;
+    }
+    else {
+      fwrite(&uc,sizeof(UCommand),1,ouf);
+    }
+  }
+  //send the last chunk
+  if (interpolate)
+    for (int dev=0;dev<devCount;dev++) {
+      if (nextuc[dev].timestamp==-1) continue;
+      fwrite(&nextuc[dev],sizeof(UCommand),1,ouf);
+    }
   fclose(inf);
   fclose(ouf);
 }
